--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.0",
     "com.unity.render-pipelines.universal": "7.5.1",
     "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "2.1.3",
@@ -39,5 +40,5 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  }, "testables" : [ "com.unity.inputsystem" ]
 }
